2006-02-24  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        Add Path stubs for Win32 build.

        * WebCore.vcproj/WebCore/WebCore.vcproj:
        * platform/win/TemporaryLinkStubs.cpp:
        (Path::Path):
        (Path::~Path):
        (Path::operator=):
        (Path::contains):
        (Path::translate):
        (Path::boundingRect):

2006-02-24  David Hyatt  <hyatt@apple.com>

        In preparation for the elimination of QFont and QFontMetrics, rename methods on RenderStyle.  htmlFont() becomes simply
        font().  The old font() method turns into qfont().  Also added a helper for obtaining the fontDescription() directly from
        the RenderStyle (without first obtaining the htmlFont()).

        Reviewed by darin

        * WebCore.xcodeproj/project.pbxproj:
        * bindings/objc/DOM.mm:
        (-[DOMElement _font]):
        * bridge/mac/MacFrame.mm:
        (WebCore::MacFrame::attributedString):
        (WebCore::MacFrame::fontForSelection):
        (WebCore::MacFrame::fontAttributesForSelectionStart):
        * css/css_computedstyle.cpp:
        (WebCore::CSSComputedStyleDeclarationImpl::getPropertyCSSValue):
        * css/css_valueimpl.cpp:
        (WebCore::CSSPrimitiveValueImpl::computeLengthFloat):
        * css/cssstyleselector.cpp:
        (WebCore::CSSStyleSelector::styleForElement):
        (WebCore::CSSStyleSelector::pseudoStyleForElement):
        (WebCore::CSSStyleSelector::applyProperty):
        (WebCore::CSSStyleSelector::checkForTextSizeAdjust):
        (WebCore::CSSStyleSelector::checkForGenericFamilyChange):
        * dom/DocumentImpl.cpp:
        (WebCore::DocumentImpl::recalcStyle):
        * editing/visible_text.cpp:
        (khtml::TextIterator::exitNode):
        * ksvg2/svg/SVGLengthImpl.cpp:
        (SVGLengthImpl::updateValue):
        * kwq/KWQAccObject.mm:
        (AXAttributeStringSetStyle):
        * rendering/InlineTextBox.cpp:
        (khtml::InlineTextBox::paint):