@@ -1,3 +1,9 @@
+2006-02-24  Vicki Murley <vicki@apple.com>
+
+        - test case for <rdar://problem/4394910> calling Javascript window.close() does not trigger onbeforeunload event
+
+        * manual-tests/onbeforeunload-close_with_javascript.html: Added.
+
 2006-02-24  Eric Seidel  <eseidel@apple.com>
 
         Reviewed by mjs.
